--- a/Spam-Ham Detection using NLP - Naveen KM.ipynb
+++ b/Spam-Ham Detection using NLP - Naveen KM.ipynb
@@ -2880,7 +2880,7 @@
    "id": "e440eced",
    "metadata": {},
    "source": [
-    "# Naveen KM"
+    "# Naveen KM and Guruakash P"
    ]
   },
   {
